--- a/frontend/src/css/Background.css
+++ b/frontend/src/css/Background.css
@@ -98,7 +98,7 @@
     transform: translate(-50%, 0%);
 }
 
-.table-row-light {
+/* .table-row-light {
     background-color: #FDF3D1;
 }
 .table-row-dark {
@@ -107,4 +107,4 @@
 
 .meetTable thead > tr > th {
     background-color: #FDF3D1;
-}
+} */
