--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,35 @@
-body {
+@font-face {
+  font-family: 'Nunito';
+  src: local('Nunito'), url(./font/static/Nunito-Regular.ttf) format('truetype');
+}
+
+/* @font-face {
+  font-family: 'Nunito';
+  font-weight: 300;
+  src: local('Nunito'), url(./font/static/Nunito-Light.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Nunito';
+  font-weight: 700;
+  src: local('Nunito'), url(./font/static/Nunito-Bold.ttf) format('truetype');
+}
+
+@font-face {
+  font-family: 'Nunito';
+  font-weight: 900;
+  src: local('Nunito'), url(./font/static/Nunito-Black.ttf) format('truetype');
+} */
+
+body, html {
+  width: 100%;
+  height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Nunito';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
