--- a/frontend/src/css/Background.css
+++ b/frontend/src/css/Background.css
@@ -157,3 +157,10 @@
 .meetTable thead > tr > th {
     background-color: #FDF3D1;
 } */
+
+
+.meetTableColumn {
+  background-color: #FDF3D1 !important;
+  color: #7A3E00 !important;
+  border-bottom: 1px solid #7A3E00 !important;
+}
