--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 
-.site-layout-content {
+/* .site-layout-content {
   min-height: 280px;
   padding: 24px;
 }
@@ -51,4 +51,4 @@
 .ant-row-rtl #components-layout-demo-top .logo {
   float: right;
   margin: 16px 0 16px 24px;
-}
+} */
