--- a/frontend/src/css/Background.css
+++ b/frontend/src/css/Background.css
@@ -1,5 +1,4 @@
 .mainContainer {
-  /* border: 1px solid blue; */
   width: 100%;
   height: 100vh;
   min-width: 1500px;
@@ -116,6 +115,7 @@
 .meetTableColumn {
   background-color: #fdf3d1 !important;
   color: #7a3e00 !important;
+  /* border-radius: 0; */
   border-bottom: 1px solid #7a3e00 !important;
 }
 
