--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,12 @@
 @font-face {
-  font-family: 'Nunito';
-  src: local('Nunito'), url(./font/static/Nunito-Regular.ttf) format('truetype');
+  font-family: "Nunito";
+  src: local("Nunito"), url(./font/static/Nunito-Regular.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: 'Lobster';
-  src: local('Lobster'), url(./font/static/Lobster-Regular.ttf) format('truetype');
+  font-family: "Lobster";
+  src: local("Lobster"),
+    url(./font/static/Lobster-Regular.ttf) format("truetype");
 }
 
 /* @font-face {
@@ -26,15 +27,16 @@
   src: local('Nunito'), url(./font/static/Nunito-Black.ttf) format('truetype');
 } */
 
-body, html {
-  width: 100%;
-  height: 100vh;
+body,
+html {
   margin: 0;
-  font-family: 'Nunito';
+  height: auto;
+  font-family: "Nunito";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
