guest join meet api logiv

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -28,6 +28,7 @@ body,
 html {
   margin: 0;
   height: auto;
+  // min-width: 600px;
   font-family: "Nunito";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
