backend/line_login

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,6 +68,11 @@ html .ant-picker-time-panel ::-webkit-scrollbar-thumb {
   background-color: #d8d8d8;
   width: 1px;
 }
+body .ant-modal-content,
+html .ant-modal-content {
+  min-width: -moz-fit-content !important;
+  min-width: fit-content !important;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
