--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -28,7 +28,8 @@ body,
 html {
   margin: 0;
   height: auto;
-  // min-width: 1000px;
+  min-width: 900px;
+  min-height: 100vh;
   font-family: "Nunito";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
